# saltpaper

./: pyproject.toml
saltpaper/: __init__.py
saltpaper/functions/: vectortools.py
saltpaper/services/: assetservice.py  displayservice.py  inputservice.py  layer.py  renderservice.py
saltpaper/worldsystem/: entity.py
saltpaper/worldsystem/components/: position.py
